--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -9,8 +9,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strictNullChecks": true,
-    "target": "es6",
-    "jsx": "react"
+    "target": "es6"
   },
   "exclude": ["node_modules"]
 }
