--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -1,53 +1,58 @@
 {
   "name": "@novu/nextjs",
   "version": "2.6.6",
-  "repository": "https://github.com/novuhq/novu",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/novuhq/novu",
+    "directory": "packages/nextjs"
+  },
+  "homepage": "https://novu.co",
   "description": "Novu <Inbox /> Next.js SDK",
   "author": "Novu",
   "license": "ISC",
-  "main": "dist/server/server.js",
-  "module": "dist/client/esm/index.js",
-  "types": "dist/client/index.d.ts",
+  "main": "./dist/cjs/server/index.js",
+  "module": "./dist/esm/pages-router/index.js",
+  "types": "./dist/types/pages-router/index.d.ts",
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/client/index.d.ts",
-        "react-server": "./dist/app-router/esm/index.js",
-        "default": "./dist/client/esm/index.js"
+        "types": "./dist/types/pages-router/index.d.ts",
+        "react-server": "./dist/esm/app-router/index.js",
+        "default": "./dist/esm/pages-router/index.js"
       },
       "require": {
-        "types": "./dist/client/index.d.ts",
-        "react-server": "./dist/app-router/index.js",
-        "default": "./dist/client/index.js"
+        "types": "./dist/types/pages-router/index.d.ts",
+        "react-server": "./dist/cjs/app-router/index.js",
+        "default": "./dist/cjs/pages-router/index.js"
       }
     },
     "./hooks": {
       "import": {
-        "types": "./dist/hooks/index.d.ts",
-        "default": "./dist/hooks/esm/index.js"
+        "types": "./dist/types/hooks/index.d.ts",
+        "default": "./dist/esm/hooks/index.js"
       },
       "require": {
-        "types": "./dist/hooks/index.d.ts",
-        "default": "./dist/hooks/index.js"
+        "types": "./dist/types/hooks/index.d.ts",
+        "default": "./dist/cjs/hooks/index.js"
       }
     },
     "./themes": {
       "import": {
-        "types": "./dist/themes/index.d.ts",
-        "default": "./dist/themes/esm/index.js"
+        "types": "./dist/types/themes/index.d.ts",
+        "default": "./dist/esm/themes/index.js"
       },
       "require": {
-        "types": "./dist/themes/index.d.ts",
-        "default": "./dist/themes/index.js"
+        "types": "./dist/types/themes/index.d.ts",
+        "default": "./dist/cjs/themes/index.js"
       }
     }
   },
   "files": [
     "dist",
-    "dist/client/**/*",
-    "dist/server/**/*",
-    "dist/hooks/**/*",
-    "dist/themes/**/*",
+    "dist/cjs/**/*",
+    "dist/esm/**/*",
+    "dist/types/**/*",
+    "server/**/*",
     "hooks/**/*",
     "themes/**/*"
   ],
@@ -58,9 +63,10 @@
   },
   "scripts": {
     "build:watch": "tsup --watch",
-    "build": "tsup && pnpm run check-exports",
+    "build": "tsup && pnpm run build:declarations && pnpm run check-exports",
+    "build:declarations": "tsc -p tsconfig.declarations.json",
     "lint": "eslint src",
-    "check-exports": "attw --pack . --profile node16 --ignore-rules unexpected-module-syntax"
+    "check-exports": "attw --pack . --ignore-rules unexpected-module-syntax"
   },
   "browserslist": {
     "production": [
@@ -79,13 +85,14 @@
     "@types/node": "^20.14.12",
     "@types/react": "*",
     "@types/react-dom": "*",
+    "esbuild-plugin-file-path-extensions": "^2.1.4",
     "tsup": "^8.2.1",
     "typescript": "5.6.2"
   },
   "peerDependencies": {
-    "next": ">=13.5.2",
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "next": ">=13.5.2 || ^14.0.0 || ^15.0.0",
+    "react": "^18.0.0 || ^19.0.0 || ^19.0.0-0",
+    "react-dom": "^18.0.0 || ^19.0.0 || ^19.0.0-0"
   },
   "peerDependenciesMeta": {
     "react-dom": {
