--- a/packages/react/hooks/package.json
+++ b/packages/react/hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "../dist/client/hooks/index.js",
-  "module": "../dist/client/hooks/index.mjs",
-  "types": "../dist/client/hooks/index.d.ts"
+  "main": "../dist/cjs/hooks/index.cjs",
+  "module": "../dist/esm/hooks/index.js",
+  "types": "../dist/esm/hooks/index.d.ts"
 }
