--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,59 +1,78 @@
 {
   "name": "@novu/react",
   "version": "2.6.6",
-  "repository": "https://github.com/novuhq/novu",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/novuhq/novu",
+    "directory": "packages/react"
+  },
+  "homepage": "https://novu.co",
   "description": "Novu <Inbox /> React SDK",
   "author": "Novu",
   "license": "ISC",
-  "main": "./dist/server/index.js",
-  "browser": "./dist/client/components/index.js",
-  "types": "./dist/client/components/index.d.ts",
+  "type": "module",
+  "main": "./dist/cjs/server/index.cjs",
+  "browser": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "exports": {
     ".": {
       "browser": {
         "import": {
-          "types": "./dist/client/components/index.d.mts",
-          "default": "./dist/client/components/index.mjs"
+          "types": "./dist/esm/index.d.ts",
+          "default": "./dist/esm/index.js"
         },
         "require": {
-          "types": "./dist/client/components/index.d.ts",
-          "default": "./dist/client/components/index.js"
+          "types": "./dist/cjs/index.d.cts",
+          "default": "./dist/cjs/index.cjs"
         }
       },
       "import": {
-        "types": "./dist/client/components/index.d.mts",
-        "default": "./dist/server/index.mjs"
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/server/index.js"
       },
       "require": {
-        "types": "./dist/client/components/index.d.ts",
-        "default": "./dist/server/index.js"
+        "types": "./dist/cjs/index.d.cts",
+        "default": "./dist/cjs/server/index.cjs"
       }
     },
     "./hooks": {
       "import": {
-        "types": "./dist/client/hooks/index.d.mts",
-        "default": "./dist/client/hooks/index.mjs"
+        "types": "./dist/esm/hooks/index.d.ts",
+        "default": "./dist/esm/hooks/index.js"
       },
       "require": {
-        "types": "./dist/client/hooks/index.d.ts",
-        "default": "./dist/client/hooks/index.js"
+        "types": "./dist/cjs/hooks/index.d.cts",
+        "default": "./dist/cjs/hooks/index.cjs"
       }
     },
     "./themes": {
       "import": {
-        "types": "./dist/client/themes/index.d.mts",
-        "default": "./dist/client/themes/index.mjs"
+        "types": "./dist/esm/themes/index.d.ts",
+        "default": "./dist/esm/themes/index.js"
       },
       "require": {
-        "types": "./dist/client/themes/index.d.ts",
-        "default": "./dist/client/themes/index.js"
+        "types": "./dist/cjs/themes/index.d.cts",
+        "default": "./dist/cjs/themes/index.cjs"
+      }
+    },
+    "./server": {
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/server/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.cts",
+        "default": "./dist/cjs/server/index.cjs"
       }
     }
   },
   "files": [
-    "dist/**/*",
+    "dist",
+    "dist/esm/**/*",
+    "dist/cjs/**/*",
     "hooks/**/*",
-    "themes/**/*"
+    "themes/**/*",
+    "server/**/*"
   ],
   "sideEffects": false,
   "private": false,
@@ -83,12 +102,13 @@
     "@types/node": "^20.14.12",
     "@types/react": "*",
     "@types/react-dom": "*",
+    "esbuild-plugin-file-path-extensions": "^2.1.4",
     "tsup": "^8.2.1",
     "typescript": "5.6.2"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react": "^18.0.0 || ^19.0.0 || ^19.0.0-0",
+    "react-dom": "^18.0.0 || ^19.0.0 || ^19.0.0-0"
   },
   "peerDependenciesMeta": {
     "react-dom": {
