--- a/packages/react/themes/package.json
+++ b/packages/react/themes/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "../dist/client/themes/index.js",
-  "module": "../dist/client/themes/index.mjs",
-  "types": "../dist/client/themes/index.d.ts"
+  "main": "../dist/cjs/themes/index.cjs",
+  "module": "../dist/esm/themes/index.js",
+  "types": "../dist/esm/themes/index.d.ts"
 }
