--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,17 +1,20 @@
 {
-  "include": ["src"],
+  "include": ["src/**/*", "src/**/*.d.ts"],
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
-    "target": "ES6",
+    "target": "ES2020",
     "esModuleInterop": true,
-    "module": "NodeNext",
+    "module": "ESNext",
     "isolatedModules": true,
     "jsx": "react-jsx",
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "Bundler",
+    "emitDecoratorMetadata": false,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "outDir": "./dist/esm",
+    "rootDir": "./src"
   },
   "exclude": ["src/**/*.test.*", "src/*.test.*", "node_modules", "**/node_modules/*"]
 }
