--- a/docker/community/.env.example
+++ b/docker/community/.env.example
@@ -16,8 +16,8 @@ HOST_NAME=http://localhost
 # General
 # available values 'dev', 'test', 'production', 'ci', 'local'
 NODE_ENV=local
-MONGO_MAX_POOL_SIZE=200
-MONGO_MIN_POOL_SIZE=75
+MONGO_MAX_POOL_SIZE=10
+MONGO_MIN_POOL_SIZE=5
 
 # MONGO USER
 MONGO_INITDB_ROOT_USERNAME=root
@@ -68,8 +68,8 @@ WIDGET_CONTEXT_PATH=
 # Analytics
 SENTRY_DSN=
 # change these values
-NEW_RELIC_APP_NAME=
-NEW_RELIC_LICENSE_KEY=
+NEW_RELIC_APP_NAME="NEW_RELIC_APP_NAME"
+NEW_RELIC_LICENSE_KEY="NEW_RELIC_LICENSE_KEY"
 
 BROADCAST_QUEUE_CHUNK_SIZE=100
 MULTICAST_QUEUE_CHUNK_SIZE=100
