chore(dashboard): Remove FF for Inbox V3 (#7947)

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -28,8 +28,7 @@
     "@novu/api": "workspace:*",
     "@novu/framework": "workspace:*",
     "@novu/js": "workspace:*",
-    "@novu/react": "https://pkg.pr.new/novuhq/novu/@novu/react@1e540b2",
-    "@novu/react-v2": "npm:@novu/react@2.6.6",
+    "@novu/react": "workspace:*",
     "@novu/shared": "workspace:*",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
