--- a/enterprise/packages/auth/package.json
+++ b/enterprise/packages/auth/package.json
@@ -12,8 +12,8 @@
     "test-ee": "cross-env TS_NODE_COMPILER_OPTIONS='{\"strictNullChecks\": false}' NODE_ENV=test mocha --timeout 10000 --require ts-node/register --exit --file tests/setup.ts src/**/**/*.spec.ts"
   },
   "dependencies": {
-    "@clerk/backend": "^1.6.2",
-    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/backend": "^1.25.2",
+    "@clerk/express": "^1.3.53",
     "@novu/application-generic": "workspace:*",
     "@novu/dal": "workspace:*",
     "@novu/shared": "workspace:*",
