fix(root): add NEW_RELIC_ENABLED to docker community (#7943)

--- a/docker/community/.env.example
+++ b/docker/community/.env.example
@@ -67,7 +67,9 @@ WIDGET_CONTEXT_PATH=
 
 # Analytics
 SENTRY_DSN=
-# change these values
+
+# update these values in case you are using New Relic, by default New Relic is disabled
+NEW_RELIC_ENABLED=false
 NEW_RELIC_APP_NAME="NEW_RELIC_APP_NAME"
 NEW_RELIC_LICENSE_KEY="NEW_RELIC_LICENSE_KEY"
 
