--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -97,6 +97,7 @@
     "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0",
     "recursive-diff": "^1.0.8",
+    "redlock": "5.0.0-beta.2",
     "reflect-metadata": "0.2.2",
     "rimraf": "^3.0.2",
     "rxjs": "7.8.1",
