fix(root): Stop updating lock-file when releasing new packages
This prevents a Error: Command failed: pnpm install --lockfile-only during pnpm release version.

--- a/nx.json
+++ b/nx.json
@@ -17,6 +17,9 @@
   },
   "extends": "@nx/workspace/presets/npm.json",
   "release": {
+    "version": {
+      "skipLockFileUpdate": true
+    },
     "changelog": {
       "workspaceChangelog": false,
       "projectChangelogs": true
