--- a/.github/workflows/prod-deploy-web.yml
+++ b/.github/workflows/prod-deploy-web.yml
@@ -28,7 +28,7 @@ jobs:
       netlify_site_id: d2e8b860-7016-4202-9256-ebca0f13259a
       clerk_publishable_key: pk_live_Y2xlcmsuZXUuZGFzaGJvYXJkLm5vdnUuY28k
       clerk_is_ee_auth_enabled: true
-      new_dashboard_url: https://eu.dashboard-v2.novu.co
+      new_dashboard_url: https://eu.dashboard.novu.co
     secrets: inherit
 
   deploy_web_us:
@@ -49,5 +49,5 @@ jobs:
       netlify_site_id: 8639d8b9-81f9-44c3-b885-585a7fd2b5ff
       clerk_publishable_key: pk_live_Y2xlcmsuZGFzaGJvYXJkLm5vdnUuY28k
       clerk_is_ee_auth_enabled: true
-      new_dashboard_url: https://dashboard-v2.novu.co
+      new_dashboard_url: https://dashboard.novu.co
     secrets: inherit
