fix(dashboard): Bypass ignore error
The custom ignore command raises a "/usr/bin/bash: pnpm: command not found" error. So let's try with npx instead.

Refer to https://docs.netlify.com/configure-builds/ignore-builds/#custom-ignore-command

--- a/apps/dashboard/netlify.toml
+++ b/apps/dashboard/netlify.toml
@@ -7,7 +7,7 @@
 
 [context.deploy-preview]
   command = "pnpm run build:dashboard --skip-nx-cache"
-  ignore = "pnpm nx show projects --affected --base=origin/next --head=HEAD | grep -q '@novu/dashboard' && echo 1 || echo 0"
+  ignore = "npx nx show projects --affected --base=origin/next --head=HEAD | grep -q '@novu/dashboard' && echo 1 || echo 0"
 
 [[redirects]]
   from = "/legacy/*"
