--- a/apps/dashboard/netlify.toml
+++ b/apps/dashboard/netlify.toml
@@ -5,6 +5,10 @@
   DISABLE_ESLINT_PLUGIN="true"
   NODE_OPTIONS="--max_old_space_size=4096"
 
+[context.deploy-preview]
+  command = "pnpm run build:dashboard --skip-nx-cache"
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF apps/dashboard"
+
 [[redirects]]
   from = "/legacy/*"
   to = "/legacy/index.html"
