fix(api-service): cors unit tests (#8049)

--- a/apps/api/src/.env.test
+++ b/apps/api/src/.env.test
@@ -41,7 +41,7 @@ SENDGRID_API_KEY=SG.123123
 S3_ACCESS_KEY=
 S3_SECRET=
 REDIS_ARENA_PORT=4568
-FRONT_BASE_URL=http://127.0.0.1:4200
+FRONT_BASE_URL='^https?://([a-zA-Z-_0-9]+.)?(dashboard(-v[0-9]+)?.novu(-staging)?.co)$'
 RELEASLY_MAIL=support@starter.co
 BACK_OFFICE_URL=http://127.0.0.1:5200
 INTERCOM_API_KEY=
