chore(root): Clean up top level npm scripts
Just a minor clean up

--- a/.github/workflows/reusable-api-e2e.yml
+++ b/.github/workflows/reusable-api-e2e.yml
@@ -46,7 +46,7 @@ jobs:
         name: Start localstack
 
       - name: Build API & Worker
-        run: CI='' pnpm run build:api_and_worker --skip-nx-cache
+        run: CI='' pnpm nx run-many --skip-nx-cache --target=build --all --projects=@novu/api-service,@novu/worker
 
       - name: Start Worker
         shell: bash
