--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "build:api": "nx build @novu/api-service",
     "build:dashboard": "nx build @novu/dashboard",
     "build:inbound-mail": "nx build @novu/inbound-mail",
-    "build:api_and_worker": "nx run-many --target=build --all --projects=@novu/api-service,@novu/worker",
     "build:packages": "nx run-many --target=build --all --projects=tag:type:package",
-    "build:storybook": "nx run @novu/design-system:build-storybook",
+    "build:v2": "nx run-many --target=build --all --projects=@novu/api-service,@novu/worker,@novu/ws,@novu/dashboard,tag:type:package",
     "build:web": "nx build @novu/web",
     "build:webhook": "nx build @novu/webhook",
     "build:with-ee": "pnpm build && pnpm build-ee",
     "build:worker": "nx build @novu/worker",
     "build:ws": "nx build @novu/ws",
-    "build": "nx run-many --target=build --all --exclude=nextjs",
+    "build": "nx run-many --target=build --all --exclude=nextjs,nestjs",
     "clean": "rimraf **/build **/dist **/node_modules",
     "commit": "cz",
     "dev-environment-setup": "sh ./scripts/dev-environment-setup.sh",
