chore(api): Refactor workflows v2 (#8069)
Co-authored-by: Adam Chmara <adam.chmara1@gmail.com>

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -129,6 +129,7 @@
     "async": "^3.2.0",
     "chai": "^4.2.0",
     "express": "^5.0.1",
+    "get-port": "^5.1.1",
     "mocha": "^10.2.0",
     "sinon": "^9.2.4",
     "ts-loader": "~9.4.0",
