feat(root): create submodule sync check after merge (#7833)

--- a/.github/workflows/check-submodule-sync-pr.yaml
+++ b/.github/workflows/check-submodule-sync-pr.yaml
@@ -24,7 +24,7 @@ on:
 
 jobs:
   check_submodule_token:
-    name: Check if the secret exists or not.
+    name: Check if submodule token exists
     runs-on: ubuntu-latest
     outputs:
       has_token: ${{ steps.secret-check.outputs.has_token }}
