--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "tar": "^6.1.11",
     "ts-jest": "27.1.5",
     "ts-node": "~10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "5.6.2",
     "typescript-eslint": "^8.13.0",
     "wait-port": "^0.3.0",
