feat(api-service,framework): toSentence and pluralize LiquidJS filters (#8094)

--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -214,6 +214,7 @@
     "@types/aws-lambda": "^8.10.141",
     "@types/express": "^4.17.13",
     "@types/node": "^20.15.0",
+    "@types/pluralize": "^0.0.33",
     "@types/sanitize-html": "2.11.0",
     "@vercel/node": "^2.15.9",
     "aws-lambda": "^1.0.7",
@@ -238,6 +239,7 @@
     "cross-fetch": "^4.0.0",
     "json-schema-to-ts": "^3.0.0",
     "liquidjs": "^10.13.1",
+    "pluralize": "^8.0.0",
     "sanitize-html": "^2.13.0"
   },
   "nx": {
