--- a/apps/api/src/.env.development
+++ b/apps/api/src/.env.development
@@ -40,7 +40,7 @@ REDIS_CLUSTER_KEY_PREFIX=
 NEW_RELIC_ENABLED=true
 NEW_RELIC_APP_NAME="[DEV] - api"
 NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
-LOGGING_LEVEL=info
+LOG_LEVEL=info
 
 VERCEL_REDIRECT_URI=https://dashboard.novu-staging.co/auth/login
 VERCEL_BASE_URL=https://api.vercel.com
