--- a/apps/api/src/.example.env
+++ b/apps/api/src/.example.env
@@ -58,7 +58,7 @@ VERCEL_BASE_URL=https://api.vercel.com
 STORE_NOTIFICATION_CONTENT=true
 
 INTERCOM_IDENTITY_VERIFICATION_SECRET_KEY=
-LOGGING_LEVEL=info
+LOG_LEVEL=info
 
 LAUNCH_DARKLY_SDK_KEY=
 
