--- a/apps/webhook/src/.env.development
+++ b/apps/webhook/src/.env.development
@@ -5,4 +5,4 @@ MONGO_URL=mongodb://127.0.0.1:27017/novu-db
 NEW_RELIC_ENABLED=true
 NEW_RELIC_APP_NAME="[DEV] - WEBHOOK"
 NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
-LOGGING_LEVEL=info
+LOG_LEVEL=info
