--- a/apps/ws/src/.env.development
+++ b/apps/ws/src/.env.development
@@ -13,7 +13,7 @@ WS_CONTEXT_PATH=
 NEW_RELIC_ENABLED=true
 NEW_RELIC_APP_NAME="[DEV] - ws"
 NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
-LOGGING_LEVEL=info
+LOG_LEVEL=info
 
 MONGO_AUTO_CREATE_INDEXES=true
 
