--- a/apps/ws/src/.env.test
+++ b/apps/ws/src/.env.test
@@ -13,5 +13,5 @@ REDIS_CACHE_SERVICE_PORT=6379
 GLOBAL_CONTEXT_PATH=
 WS_CONTEXT_PATH=
 
-LOGGING_LEVEL=info
+LOG_LEVEL=info
 MONGO_AUTO_CREATE_INDEXES=true
