--- a/apps/api/src/.env.production
+++ b/apps/api/src/.env.production
@@ -27,7 +27,7 @@ REDIS_CLUSTER_KEY_PREFIX=
 
 NEW_RELIC_ENABLED=true
 NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
-LOGGING_LEVEL=info
+LOG_LEVEL=info
 
 VERCEL_REDIRECT_URI=https://dashboard.novu.co/auth/login
 VERCEL_BASE_URL=https://api.vercel.com
