--- a/apps/api/src/.env.test
+++ b/apps/api/src/.env.test
@@ -74,7 +74,7 @@ MAX_NOVU_INTEGRATION_MAIL_REQUESTS=300
 INTERCOM_IDENTITY_VERIFICATION_SECRET_KEY=
 NOVU_EMAIL_INTEGRATION_API_KEY=test
 
-LOGGING_LEVEL=error
+LOG_LEVEL=error
 
 LAUNCH_DARKLY_SDK_KEY=
 
