--- a/apps/inbound-mail/.example.env
+++ b/apps/inbound-mail/.example.env
@@ -6,6 +6,6 @@ REDIS_DB_INDEX="2"
 REDIS_HOST="localhost"
 REDIS_PORT="6379"
 
-LOGGING_LEVEL=info
+LOG_LEVEL=info
 ## This value should be set to true if it is the first time you are running the with the database
 MONGO_AUTO_CREATE_INDEXES=false
