--- a/apps/inbound-mail/src/.env.development
+++ b/apps/inbound-mail/src/.env.development
@@ -24,4 +24,4 @@ REDIS_CLUSTER_KEY_PREFIX=
 NEW_RELIC_ENABLED=true
 NEW_RELIC_APP_NAME="[DEV] - INBOUND-MAIL"
 NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
-LOGGING_LEVEL=info
+LOG_LEVEL=info
