--- a/apps/webhook/src/.env.production
+++ b/apps/webhook/src/.env.production
@@ -6,5 +6,5 @@ WIDGET_BASE_URL=https://widget.novu.co
 
 NEW_RELIC_ENABLED=true
 NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
-LOGGING_LEVEL=info
+LOG_LEVEL=info
 MONGO_MIN_POOL_SIZE=50
