--- a/apps/ws/src/.env.production
+++ b/apps/ws/src/.env.production
@@ -10,7 +10,7 @@ WS_CONTEXT_PATH=
 
 NEW_RELIC_ENABLED=true
 NEW_RELIC_APPLICATION_LOGGING_FORWARDING_ENABLED=true
-LOGGING_LEVEL=info
+LOG_LEVEL=info
 MONGO_MIN_POOL_SIZE=50
 
 ## This value should be set to true if it is the first time you are running the with the database
