--- a/apps/ws/Dockerfile
+++ b/apps/ws/Dockerfile
@@ -1,13 +1,4 @@
-FROM node:20-alpine3.19
-
-ENV NX_DAEMON=false
-
-RUN npm install -g pnpm@9.11.0 --loglevel notice
-RUN npm i pm2 -g
-RUN apk --no-cache add g++ make py3-pip
-
-USER 1000
-WORKDIR /usr/src/app
+FROM ghcr.io/novuhq/novu/base:1.0.0
 
 COPY --chown=1000:1000 .npmrc .
 COPY --chown=1000:1000 .npmrc-cloud .
@@ -19,9 +10,8 @@ COPY --chown=1000:1000 libs/dal ./libs/dal
 COPY --chown=1000:1000 packages/shared ./packages/shared
 COPY --chown=1000:1000 libs/testing ./libs/testing
 COPY --chown=1000:1000 libs/application-generic ./libs/application-generic
-COPY --chown=1000:1000 packages/client ./packages/client
-COPY --chown=1000:1000 packages/stateless ./packages/stateless
 COPY --chown=1000:1000 packages/framework ./packages/framework
+COPY --chown=1000:1000 packages/stateless ./packages/stateless
 COPY --chown=1000:1000 packages/providers ./packages/providers
 
 COPY --chown=1000:1000 ["tsconfig.json","nx.json","pnpm-workspace.yaml","pnpm-lock.yaml", ".npmrc", "./"]
