refactor(dashboard): remove HubSpot form component and styles, integrate Cal.com for sales contact (#8183)

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -20,6 +20,7 @@
     "test:e2e:merge-report": "playwright merge-reports --reporter html"
   },
   "dependencies": {
+    "@calcom/embed-react": "1.5.2",
     "@clerk/clerk-react": "^5.15.1",
     "@codemirror/autocomplete": "^6.18.3",
     "@hookform/resolvers": "^3.9.0",
