--- a/docker/community/docker-compose.yml
+++ b/docker/community/docker-compose.yml
@@ -44,7 +44,6 @@ services:
     environment:
       NODE_ENV: ${NODE_ENV}
       API_ROOT_URL: ${API_ROOT_URL}
-      DISABLE_USER_REGISTRATION: ${DISABLE_USER_REGISTRATION}
       PORT: ${API_PORT}
       FRONT_BASE_URL: ${FRONT_BASE_URL}
       MONGO_URL: ${MONGO_URL}
@@ -64,6 +63,7 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       STORE_ENCRYPTION_KEY: ${STORE_ENCRYPTION_KEY}
       NOVU_SECRET_KEY: ${NOVU_SECRET_KEY}
+      SELF_HOSTED_TOKEN: ${SELF_HOSTED_TOKEN}
       SUBSCRIBER_WIDGET_JWT_EXPIRATION_TIME: ${SUBSCRIBER_WIDGET_JWT_EXPIRATION_TIME}
       SENTRY_DSN: ${SENTRY_DSN}
       NEW_RELIC_ENABLED: ${NEW_RELIC_ENABLED}
@@ -71,6 +71,11 @@ services:
       NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY}
       API_CONTEXT_PATH: ${API_CONTEXT_PATH}
       MONGO_AUTO_CREATE_INDEXES: ${MONGO_AUTO_CREATE_INDEXES}
+      IS_API_IDEMPOTENCY_ENABLED: ${IS_API_IDEMPOTENCY_ENABLED}
+      IS_API_RATE_LIMITING_ENABLED: ${IS_API_RATE_LIMITING_ENABLED}
+      IS_NEW_MESSAGES_API_RESPONSE_ENABLED: ${IS_NEW_MESSAGES_API_RESPONSE_ENABLED}
+      IS_V2_ENABLED: ${IS_V2_ENABLED}
+      NOVU_SELF_HOSTING_ORGANIZATION_ID: ${NOVU_SELF_HOSTING_ORGANIZATION_ID}
     ports:
       - ${API_PORT}:${API_PORT}
 
@@ -109,6 +114,9 @@ services:
       NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY}
       BROADCAST_QUEUE_CHUNK_SIZE: ${BROADCAST_QUEUE_CHUNK_SIZE}
       MULTICAST_QUEUE_CHUNK_SIZE: ${MULTICAST_QUEUE_CHUNK_SIZE}
+      API_ROOT_URL: http://api:${API_PORT}
+      IS_EMAIL_INLINE_CSS_DISABLED: ${IS_EMAIL_INLINE_CSS_DISABLED}
+      IS_USE_MERGED_DIGEST_ID_ENABLED: ${IS_USE_MERGED_DIGEST_ID_ENABLED}
 
   ws:
     image: 'ghcr.io/novuhq/novu/ws:2.1.1'
@@ -138,12 +146,12 @@ services:
     ports:
       - ${WS_PORT}:${WS_PORT}
 
-  web:
-    image: 'ghcr.io/novuhq/novu/web:2.1.1'
+  dashboard:
+    image: 'ghcr.io/novuhq/novu/dashboard:2.1.1'
     depends_on:
       - api
       - worker
-    container_name: web
+    container_name: dashboard
     restart: unless-stopped
     logging:
       driver: 'json-file'
@@ -151,14 +159,15 @@ services:
         max-size: '50m'
         max-file: '5'
     environment:
-      REACT_APP_API_URL: ${API_ROOT_URL}
-      REACT_APP_ENVIRONMENT: ${NODE_ENV}
-      REACT_APP_WIDGET_EMBED_PATH: ${WIDGET_EMBED_PATH}
-      REACT_APP_IS_SELF_HOSTED: 'true'
-      REACT_APP_WS_URL: ${REACT_APP_WS_URL}
+      VITE_API_HOSTNAME: ${VITE_API_HOSTNAME}
+      VITE_SELF_HOSTED: true
+      VITE_WEBSOCKET_HOSTNAME: ${VITE_WEBSOCKET_HOSTNAME}
+      VITE_SELF_HOSTED_TOKEN: ${VITE_SELF_HOSTED_TOKEN}
+      IS_CONTROLS_AUTOCOMPLETE_ENABLED: ${IS_CONTROLS_AUTOCOMPLETE_ENABLED}
+      IS_WORKFLOW_NODE_PREVIEW_ENABLED: ${IS_WORKFLOW_NODE_PREVIEW_ENABLED}
+      IS_ENHANCED_DIGEST_ENABLED: ${IS_ENHANCED_DIGEST_ENABLED}
     ports:
-      - 4200:4200
-    command: ['/bin/sh', '-c', 'pnpm run envsetup:docker && pnpm run start:static:build']
+      - 4000:4000
 
 volumes:
   mongodb: ~
