--- a/docker/community/.env.example
+++ b/docker/community/.env.example
@@ -46,24 +46,22 @@ REDIS_CACHE_SERVICE_PORT=6379
 WS_PORT=3002
 
 # Root URL
-REACT_APP_WS_URL=$HOST_NAME:3002
-# Uncomment this one when deploying Novu in the local environment
-# as Web app local Dockerfile will have to load this to be used.
-# Deployment version doesn't need as we inject it with API_ROOT_URL value.
-# REACT_APP_API_URL=http://localhost:3000
+VITE_API_HOSTNAME=$HOST_NAME:3000
+VITE_WEBSOCKET_HOSTNAME=$HOST_NAME:3002
 API_ROOT_URL=$HOST_NAME:3000
-DISABLE_USER_REGISTRATION=false
 FRONT_BASE_URL=$HOST_NAME:4200
 WIDGET_EMBED_PATH=$HOST_NAME:4701/embed.umd.min.js
 WIDGET_URL=$HOST_NAME:4500
+IS_API_IDEMPOTENCY_ENABLED=false
+IS_API_RATE_LIMITING_ENABLED=false
+IS_NEW_MESSAGES_API_RESPONSE_ENABLED=true
+IS_V2_ENABLED=true
+IS_CONTROLS_AUTOCOMPLETE_ENABLED=false
+IS_WORKFLOW_NODE_PREVIEW_ENABLED=false
+IS_ENHANCED_DIGEST_ENABLED=-false
+IS_EMAIL_INLINE_CSS_DISABLED=false
+IS_USE_MERGED_DIGEST_ID_ENABLED=false
 
-# Context Paths
-# Only needed for setups with reverse-proxies
-GLOBAL_CONTEXT_PATH=
-WEB_CONTEXT_PATH=
-API_CONTEXT_PATH=
-WS_CONTEXT_PATH=
-WIDGET_CONTEXT_PATH=
 
 # Analytics
 SENTRY_DSN=
