fix(root): .env example to support migration  (#8311)

--- a/docker/community/.env.example
+++ b/docker/community/.env.example
@@ -49,9 +49,7 @@ WS_PORT=3002
 VITE_API_HOSTNAME=$HOST_NAME:3000
 VITE_WEBSOCKET_HOSTNAME=$HOST_NAME:3002
 API_ROOT_URL=$HOST_NAME:3000
-FRONT_BASE_URL=$HOST_NAME:4200
-WIDGET_EMBED_PATH=$HOST_NAME:4701/embed.umd.min.js
-WIDGET_URL=$HOST_NAME:4500
+FRONT_BASE_URL=$HOST_NAME:(4000|4200)
 IS_API_IDEMPOTENCY_ENABLED=false
 IS_API_RATE_LIMITING_ENABLED=false
 IS_NEW_MESSAGES_API_RESPONSE_ENABLED=true
