fix(api, ws, dashboard, worker): new release v2.2.0 (#8334)

--- a/docker/community/docker-compose.yml
+++ b/docker/community/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       retries: 5
 
   api:
-    image: 'ghcr.io/novuhq/novu/api:2.2.0-rc.1'
+    image: 'ghcr.io/novuhq/novu/api:2.2.0'
     depends_on:
       - mongodb
       - redis
@@ -87,7 +87,7 @@ services:
     ports:
       - ${API_PORT}:${API_PORT}
   worker:
-    image: 'ghcr.io/novuhq/novu/worker:2.2.0-rc.1'
+    image: 'ghcr.io/novuhq/novu/worker:2.2.0'
     depends_on:
       - mongodb
       - redis
@@ -125,7 +125,7 @@ services:
       IS_EMAIL_INLINE_CSS_DISABLED: ${IS_EMAIL_INLINE_CSS_DISABLED}
       IS_USE_MERGED_DIGEST_ID_ENABLED: ${IS_USE_MERGED_DIGEST_ID_ENABLED}
   ws:
-    image: 'ghcr.io/novuhq/novu/ws:2.2.0-rc.1'
+    image: 'ghcr.io/novuhq/novu/ws:2.2.0'
     depends_on:
       - mongodb
       - redis
@@ -153,7 +153,7 @@ services:
       - ${WS_PORT}:${WS_PORT}
 
   dashboard:
-    image: 'ghcr.io/novuhq/novu/dashboard:2.2.0-rc.1'
+    image: 'ghcr.io/novuhq/novu/dashboard:2.2.0'
     depends_on:
       - api
       - worker
