chore(root): update environment variable syntax for consistency  (#8359)

--- a/docker/community/.env.example
+++ b/docker/community/.env.example
@@ -23,7 +23,7 @@ MONGO_MIN_POOL_SIZE=5
 MONGO_INITDB_ROOT_USERNAME=root
 # MONGO PASSWORD
 MONGO_INITDB_ROOT_PASSWORD=secret
-MONGO_URL=mongodb://$MONGO_INITDB_ROOT_USERNAME:$MONGO_INITDB_ROOT_PASSWORD@mongodb:27017/novu-db?authSource=admin
+MONGO_URL=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/novu-db?authSource=admin
 MONGO_AUTO_CREATE_INDEXES=true
 
 REDIS_HOST=redis
@@ -33,7 +33,7 @@ REDIS_PASSWORD=
 REDIS_CACHE_SERVICE_HOST=
 
 # AWS
-S3_LOCAL_STACK=$HOST_NAME:4566
+S3_LOCAL_STACK=${HOST_NAME}:4566
 S3_BUCKET_NAME=novu-local
 S3_REGION=us-east-1
 AWS_ACCESS_KEY_ID=test
@@ -46,10 +46,10 @@ REDIS_CACHE_SERVICE_PORT=6379
 WS_PORT=3002
 
 # Root URL
-VITE_API_HOSTNAME=$HOST_NAME:3000
-VITE_WEBSOCKET_HOSTNAME=$HOST_NAME:3002
-API_ROOT_URL=$HOST_NAME:3000
-FRONT_BASE_URL=$HOST_NAME:(4000|4200)
+VITE_API_HOSTNAME=${HOST_NAME}:3000
+VITE_WEBSOCKET_HOSTNAME=${HOST_NAME}:3002
+API_ROOT_URL=${HOST_NAME}:3000
+FRONT_BASE_URL=${HOST_NAME}:(4000|4200)
 IS_API_IDEMPOTENCY_ENABLED=false
 IS_API_RATE_LIMITING_ENABLED=false
 IS_NEW_MESSAGES_API_RESPONSE_ENABLED=true
