--- a/libs/automation/src/generators/provider/files/__name__.provider.ts.template
+++ b/libs/automation/src/generators/provider/files/__name__.provider.ts.template
@@ -4,12 +4,13 @@ import {
   I<%= pascalType %>Options,
   I<%= pascalType %>Provider,
 } from '@novu/stateless';
-import { BaseProvider } from '../../../base.provider';
+import { BaseProvider, CasingEnum  } from '../../../base.provider';
 import { WithPassthrough } from '../../../utils/types';
 
 export class <%= pascalName %><%= pascalType %>Provider extends BaseProvider implements I<%= pascalType %>Provider {
   id = '<%= name %>';
   channelType = ChannelTypeEnum.<%= upperType %> as ChannelTypeEnum.<%= upperType %>;
+  protected casing: CasingEnum = CasingEnum.CAMEL_CASE;
 
   constructor(
     private config: {
