chore(): rc-2 release for react package
root: rc2 for react

fix: rc 2

fix: rc

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -66,7 +66,9 @@
     "build": "tsup && pnpm run build:declarations && pnpm run check-exports",
     "build:declarations": "tsc -p tsconfig.declarations.json",
     "lint": "eslint src",
-    "check-exports": "attw --pack . --ignore-rules unexpected-module-syntax"
+    "check-exports": "attw --pack . --ignore-rules unexpected-module-syntax",
+    "publish": "pnpm publish",
+    "publish:rc": "pnpm publish --tag rc"
   },
   "browserslist": {
     "production": [
