Revert "ci(api-service): remove --skip-nx-cache for optimized builds (#8365)"
This reverts commit a16f91980e151b6daf00aaa1d8b48e4e05c41470.

--- a/.github/workflows/on-pr.yml
+++ b/.github/workflows/on-pr.yml
@@ -218,7 +218,7 @@ jobs:
         with:
           targets: lint,build,test
           projects: ${{matrix.projectName}}
-          args: ''
+          args: '--skip-nx-cache'
 
   validate_openapi:
     name: Validate OpenAPI
