--- a/.github/workflows/reusable-web-e2e.yml
+++ b/.github/workflows/reusable-web-e2e.yml
@@ -72,7 +72,7 @@ jobs:
         with:
           targets: build
           projects: '@novu/web,@novu/api-service,@novu/worker'
-          args: ''
+          args: --skip-nx-cache
 
       - uses: ./.github/actions/start-localstack
       - uses: ./.github/actions/setup-redis-cluster
