--- a/.github/actions/run-api/action.yml
+++ b/.github/actions/run-api/action.yml
@@ -16,7 +16,7 @@ runs:
       with:
         targets: build
         projects: '@novu/api-service'
-        args: ''
+        args: '--skip-nx-cache'
 
     - name: Start API
       shell: bash
