fix: cacheable op
Reapply "ci(api-service): remove --skip-nx-cache for optimized builds (#8365)"

This reverts commit 16ea11e93557103b33a424407471ee6d687b4077.

--- a/nx.json
+++ b/nx.json
@@ -14,6 +14,15 @@
     "@nx/eslint:lint": {
       "cache": true,
       "inputs": ["default", "{workspaceRoot}/tools/eslint-rules/**/*"]
+    },
+    "@novu/api:build": {
+      "cache": false
+    },
+    "@novu/api:test": {
+      "cache": false
+    },
+    "@novu/api:lint": {
+      "cache": false
     }
   },
   "namedInputs": {
