feat(root): create keyless environment (#8276)
Co-authored-by: Dima Grossman <dima@grossman.io>

--- a/apps/api/src/.env.test
+++ b/apps/api/src/.env.test
@@ -151,3 +151,5 @@ API_ROOT_URL=http://localhost:1336
 PLAIN_SUPPORT_KEY='PLAIN_SUPPORT_KEY'
 PLAIN_IDENTITY_VERIFICATION_SECRET_KEY='PLAIN_IDENTITY_VERIFICATION_SECRET_KEY'
 NOVU_INTERNAL_SECRET_KEY=test
+KEYLESS_ORGANIZATION_ID=67b89421f8bd757ea40f39ab
+KEYLESS_USER_EMAIL=67b89421f8bd757ea40f39ab
