fix: novu react rc 4 release
fix: ver

fix: react

fix: rc 4

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@novu/nextjs",
-  "version": "3.4.0",
+  "version": "3.5.0-rc.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/novuhq/novu",
