chore(api-service): keyless debugging (#8377)

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -64,6 +64,7 @@
     "@sentry/tracing": "^7.120.3",
     "@team-plain/typescript-sdk": "5.8.0",
     "@types/newrelic": "^9.14.6",
+    "@types/request-ip": "^0.0.41",
     "@upstash/ratelimit": "^0.4.4",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
@@ -98,6 +99,7 @@
     "passport-oauth2": "^1.8.0",
     "recursive-diff": "^1.0.8",
     "reflect-metadata": "0.2.2",
+    "request-ip": "^3.3.0",
     "rimraf": "^3.0.2",
     "rxjs": "7.8.1",
     "sanitize-html": "^2.4.0",
