feat(api-service): adjust locale testing groups to v2 (#8388)

--- a/apps/api/.mocharc.json
+++ b/apps/api/.mocharc.json
@@ -1,6 +1,6 @@
 {
   "timeout": 35000,
-  "require": "@swc/register",
+  "require": "@swc-node/register",
   "file": ["e2e/setup.ts"],
   "exit": true,
   "files": ["e2e/**/*.e2e.ts", "src/**/*.e2e.ts", "src/**/**/*.spec.ts"]
