--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -128,6 +128,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/sinon": "^9.0.0",
     "@types/supertest": "^2.0.8",
+    "@swc-node/register": "^1.10.10",
     "async": "^3.2.0",
     "chai": "^4.2.0",
     "chai-subset": "^1.6.0",
