--- a/apps/worker/src/.env.test
+++ b/apps/worker/src/.env.test
@@ -69,7 +69,7 @@ NEW_RELIC_APP_NAME="[TEST] - worker"
 # Segment Analytics
 # SEGMENT_TOKEN=
 
-LOG_LEVEL=error
+LOG_LEVEL=info
 
 # Launch Darkly
 LAUNCH_DARKLY_SDK_KEY=
