--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@cspell/eslint-plugin": "^6.14.3",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "@eslint/js": "^9.9.1",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
