--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@novu/react",
-  "version": "3.5.0-rc.4",
+  "version": "3.5.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/novuhq/novu",
