--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "@cspell/eslint-plugin": "^6.14.3",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "@eslint/js": "^9.9.1",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
@@ -165,6 +164,7 @@
     "pkg-pr-new": "^0.0.24",
     "pnpm": "10.11.0",
     "prettier": "~3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "process": "^0.11.10",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
@@ -236,11 +236,32 @@
       "prosemirror-model": "1.22.3"
     },
     "onlyBuiltDependencies": [
+      "@clerk/shared",
+      "@contrast/fn-inspect",
+      "@firebase/util",
+      "@fortawesome/fontawesome-common-types",
+      "@fortawesome/fontawesome-svg-core",
+      "@fortawesome/free-regular-svg-icons",
+      "@fortawesome/free-solid-svg-icons",
       "@nestjs/core",
+      "@newrelic/native-metrics",
+      "@sentry/cli",
+      "@sentry/profiling-node",
       "@sveltejs/kit",
+      "@swc/core",
+      "bcrypt",
+      "core-js",
+      "core-js-pure",
+      "cypress",
+      "esbuild",
+      "fsevents",
+      "iframe-resizer",
+      "msgpackr-extract",
       "nestjs-pino",
+      "nice-napi",
       "nx",
-      "bcrypt"
+      "protobufjs",
+      "sharp"
     ]
   }
 }
