fix(react-native): update widget_jwt_expiration_time default value to fix session initialized (#8401)

--- a/docker/community/.env.example
+++ b/docker/community/.env.example
@@ -3,7 +3,7 @@
 # used as a secret to verify the JWT token signature
 JWT_SECRET=your-secret
 # expressed in seconds or a string describing a time span [zeit/ms](https://github.com/zeit/ms.js).  Eg: 60, "2 days", "10h", "7d"
-SUBSCRIBER_WIDGET_JWT_EXPIRATION_TIME="15 days"
+SUBSCRIBER_WIDGET_JWT_EXPIRATION_TIME=15d
 # used to encrypt/decrypt the provider credentials
 STORE_ENCRYPTION_KEY=<ENCRYPTION_KEY_MUST_BE_32_LONG>
 
