feat(api-service,dashboard,application-generic): custom html editor (#8456)

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -24,6 +24,9 @@
     "@calcom/embed-react": "1.5.2",
     "@clerk/clerk-react": "^5.15.1",
     "@codemirror/autocomplete": "^6.18.3",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-liquid": "^6.2.3",
+    "@codemirror/language": "^6.11.1",
     "@hookform/resolvers": "^3.9.0",
     "@lezer/highlight": "^1.2.1",
     "@maily-to/core": "github:novuhq/maily.to.git#release/v0.2.7-novu.13-core&path:/packages/core",
