--- a/libs/internal-sdk/.speakeasy/gen.yaml
+++ b/libs/internal-sdk/.speakeasy/gen.yaml
@@ -24,6 +24,7 @@ typescript:
     peerDependencies: {}
   additionalPackageJSON: {}
   author: Novu
+  baseErrorName: NovuError
   clientServerStatusCodesAsErrors: true
   defaultErrorName: SDKError
   enableCustomCodeRegions: false
