feat(api-service,dashboard): handle editor type change (#8457)

--- a/libs/internal-sdk/.speakeasy/gen.yaml
+++ b/libs/internal-sdk/.speakeasy/gen.yaml
@@ -16,6 +16,7 @@ generation:
   auth:
     oAuth2ClientCredentialsEnabled: false
     oAuth2PasswordEnabled: false
+  sdkHooksConfigAccess: true
 typescript:
   version: 0.1.21
   additionalDependencies:
