chore(root): enable legacy versioning in nx.json (#8463)

--- a/nx.json
+++ b/nx.json
@@ -74,6 +74,9 @@
           }
         }
       }
+    },
+    "version": {
+      "useLegacyVersioning": true
     }
   },
   "tasksRunnerOptions": {
